Form copy spacing fix.

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ body {
   pre, code{
     font-family: "Lato", sans-serif;
     font-size: medium;
-    white-space:normal;
     font-weight: bold;
-    
+    white-space: pre;
+
 }
